6084.	[bug]		When BIND was built without jemalloc, the allocator flag
			ISC_MEM_ZERO could return non-zero memory. [GL #3845]

6083.	[bug]		Fix DNSRPS-enabled builds as they were inadvertently
			broken by changes 5949 and 6042. [GL #3827]

6082.	[test]		fuzz/dns_message_checksig leaked memory when shutting
			down. [GL #3828]

6081.	[bug]		Handle primary server address lookup failures in
			nsupdate more gracefully. [GL #3830]

6080.	[bug]		'named -V' leaked memory. [GL #3829]

6079.	[bug]		Force set the DS state after a 'rdnc dnssec -checkds'
			command. [GL #3822]

6078.	[func]		Cleanup the memory statistic counters to a bare
			minumum - InUse with Malloced as alias. [GL #3718]

6077.	[func]		Implement query forwarding to DoT-enabled upstream
			servers. [GL #3726]

6076.	[bug]		Handle OS errors when creating UDP and TCP sockets
			more gracefully. [GL #3800]

6075.	[bug]		Add missing node lock when setting node->wild in
			add_wildcard_magic. [GL #3799]

6074.	[func]		Refactor the isc_nm_xfr_allowed() function to return
			isc_result_t instead of boolean. [GL #3808]

6073.	[bug]		Set RD=1 on DS requests to parental-agents. [GL #3783]

6072.	[bug]		Avoid the OpenSSL lock contention when initializing
			Message Digest Contexts by using explicit algorithm
			fetching, initializing static contexts for every
			supported algorithms, and initializing the new context
			by copying the static copy. [GL #3795]

6071.	[func]		The use of "port" when configuring query-source,
			transfer-source, notify-source and parental-source
			addresses has been deprecated, along with the
			use-v[46]-udp-ports and avoid-v[46]-udp-ports
			options. A warning will be logged when these
			options are used. In a future release, they
			will be removed. [GL #3781]

6070.	[func]		DSCP parsing has now been fully removed, and
			configuration of DSCP values in named.conf is a
			configuration error. [GL #3789]

6069.	[bug]		Detach from the view in zone_shutdown() to